--- a/web/Practical.xhtml
+++ b/web/Practical.xhtml
@@ -11,8 +11,19 @@
 
         </ui:define>
         <ui:define name="body">
-
+            <br />
+            <h:outputText value="* - Strongly Disagree" />
+            <br />
+            <h:outputText value="** - Disagree" />
+            <br />
+            <h:outputText value="*** - Neutral" />
+            <br />
+            <h:outputText value="**** - Agree" />
+            <br />
+            <h:outputText value="***** - Strongly Agree" />
+            <br />
             <h:form id="form">
+                
                 <p:growl id="messages" showDetail="true"/>  
 
                 <h:outputText style="font-size: 30px" value="#{feedback2013QuestionController.getqNo()}#{'.  '}#{feedback2013QuestionController.getqText()}"></h:outputText>
@@ -32,7 +43,7 @@
                     </p:column>
                     <p:column id="rating">
                         <f:facet name="header">
-                            <h:outputText value="Subject"/>
+                            <h:outputText value="Rating"/>
                         </f:facet>
                         <p:rating  value="#{item.rating}" />
                     </p:column>
