--- a/web/SelectSubject.xhtml
+++ b/web/SelectSubject.xhtml
@@ -20,7 +20,10 @@
                     <p:commandButton rendered="#{!feedback2013QuestionController.submitTheory}" action="#{feedback2013QuestionController.theoryQuestionnaire()}" immediate ="true" value="Theory" ></p:commandButton>
                     <p:commandButton rendered="#{!feedback2013QuestionController.submitPractical}" action="#{feedback2013QuestionController.practicalQuestionnaire()}" immediate="true" value="Practical" ></p:commandButton>
                     <p:outputLabel rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" value="Thank you for your valuable feedback. Please leave us suggestions on how to improve this experience. The suggestions link can be found at the top right corner of this page." />
-                    <p:commandButton rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" value="Suggestions" action="#{suggesstionsController.prepareCreateUser()}" ajax="false" />
+                    <br />
+                    <br />
+                    
+                    <p:commandButton rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" value="Suggestions" action="#{feedback2013SuggestionsController.prepareSuggestion()}" ajax="false" />
                     <p:commandButton rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" action="#{authBackingBean.logout()}" value="Logout" ajax="false" />
 
                 </h:panelGroup>
