--- a/web/Theory.xhtml
+++ b/web/Theory.xhtml
@@ -11,11 +11,23 @@
 
         </ui:define>
         <ui:define name="body">
-
+            <br />
+            <h:outputText value="* - Strongly Disagree" />
+            <br />
+            <h:outputText value="** - Disagree" />
+            <br />
+            <h:outputText value="*** - Neutral" />
+            <br />
+            <h:outputText value="**** - Agree" />
+            <br />
+            <h:outputText value="***** - Strongly Agree" />
+            <br />
             <h:form id="form">
                 <p:growl id="messages" showDetail="true"/>  
 
                 <h:outputText style="font-size: 30px" value="#{feedback2013QuestionController.getqNo()}#{'.  '}#{feedback2013QuestionController.getqText()}"></h:outputText>
+
+
 
                 <p:dataTable value="#{facultySubjectController.theory}" style="width: 50%" var="item" >                      
                     <p:column style="font-size: large">
@@ -32,7 +44,7 @@
                     </p:column>
                     <p:column id="rating">
                         <f:facet name="header">
-                            <h:outputText value="Subject"/>
+                            <h:outputText value="Rating"/>
                         </f:facet>
                         <p:rating  value="#{item.rating}" />
                     </p:column>
@@ -42,7 +54,7 @@
                 <br />
                 <h:outputText style="font-size: 30px" value="#{feedback2013QuestionController.getqNo2()}#{'.  '}#{feedback2013QuestionController.getqText2()}"></h:outputText>
 
-                <p:dataTable value="#{facultySubjectController.theory}" style="width: 50%" var="item" >                      
+                <p:dataTable id="tbl" value="#{facultySubjectController.theory}" style="width: 50%" var="item" >                      
                     <p:column style="font-size: large">
                         <f:facet name="header">
                             <h:outputText value="Faculty Name"/>
@@ -66,6 +78,8 @@
                 <br />
                 <p:commandButton action="#{feedback2013QuestionController.nextQuestion(0)}" update=":form" value="Next" />
             </h:form>
+            
+
         </ui:define>
     </ui:composition>
 
