--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,10 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
+
+        <f:event type="preRenderView" listener="#{feedback2013StudentController.prepareListUser()}"></f:event>
+
     </h:head>
     <h:body>
         Hello from Facelets
@@ -39,7 +43,23 @@
         <h:link outcome="/program/List" value="Show All Program Items"/>
         <br />
         <h:link outcome="/programCourse/List" value="Show All ProgramCourse Items"/>
+        <br />
+        <h:link outcome="/feedback2013Group/List" value="Show All Feedback2013Group Items"/>
+        <br />
+        <h:link outcome="/feedback2013User/List" value="Show All Feedback2013User Items"/>
+        <h:form>
+            <h:commandButton action="#{feedback2013UserController.updatePassword()}" value="dsf" />
+
+        </h:form>
+        <br />
+        <h:link outcome="/fuserGroup/List" value="Show All FuserGroup Items"/>
+        <br />
+        <h:link outcome="/feedback2013Suggestions/List" value="Show All Feedback2013Suggestions Items"/>
     </h:body>
+
+
+
+
 
 
 
