Implementation of Feedback360

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -55,7 +55,37 @@
         <h:link outcome="/fuserGroup/List" value="Show All FuserGroup Items"/>
         <br />
         <h:link outcome="/feedback2013Suggestions/List" value="Show All Feedback2013Suggestions Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360CommentsDepartment/List" value="Show All F360CommentsDepartment Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360CommentsPeer/List" value="Show All F360CommentsPeer Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360FeedbackDepartment/List" value="Show All F360FeedbackDepartment Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360FeedbackPeer/List" value="Show All F360FeedbackPeer Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360QuestionDepartment/List" value="Show All F360QuestionDepartment Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360QuestionPeer/List" value="Show All F360QuestionPeer Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360QuetionTypes/List" value="Show All F360QuetionTypes Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360User/List" value="Show All F360User Items"/>
+        <br />
+        <h:link outcome="/f360/admin/faculty/List" value="Show All Faculty Items"/>
+        <br />
+        <h:link outcome="/f360/admin/f360PeerInteraction/List" value="Show All F360PeerInteraction Items"/>
     </h:body>
+
+
+
+
+
+
+
+
+
+
 
 
 
