--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -17,7 +17,9 @@
 
 
             <div  style=" position: relative; float: right; padding-left: 2%" >
-                
+                <h:form>
+                    <p:commandButton action="#{authBackingBean.logout()}" value="Logout" ajax="false" />
+                </h:form>
             </div>
         </div>
 
