#Bug Fix - Users with role staff not able to access index.xhtml. #BugFix - Navigation from SelectSubject to Theory made different for f360.

--- a/web/f360/SelectSubject.xhtml
+++ b/web/f360/SelectSubject.xhtml
@@ -17,15 +17,8 @@
                     <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                 </h:panelGroup>
                 <h:panelGroup  style="text-align: center; font-size: 100%; vertical-align: text-top">
-                    <p:commandButton action="#{feedback2013QuestionController.theoryQuestionnaire()}" immediate ="true" value="Departmental Feedback" ></p:commandButton>
+                    <p:commandButton action="#{f360QuestionDepartmentController.departmentQuestionnaire()}" immediate ="true" value="Departmental Feedback" ></p:commandButton>
                     <p:commandButton action="#{f360QuestionPeerController.peerQuestionnaire()}" immediate="true" value="Peer Feedback"></p:commandButton>
-                    <p:outputLabel rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" value="Thank you for your valuable feedback. Please leave us suggestions on how to improve this experience. The suggestions link can be found at the top right corner of this page." />
-                    <br />
-                    <br />
-                    
-                    <p:commandButton rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" value="Suggestions" action="#{feedback2013SuggestionsController.prepareSuggestion()}" ajax="false" />
-                    <p:commandButton rendered="#{feedback2013QuestionController.submitPractical and feedback2013QuestionController.submitTheory}" action="#{authBackingBean.logout()}" value="Logout" ajax="false" />
-
                 </h:panelGroup>
 
 
