BugFix: Updated Legend for Peer Feedback

--- a/web/f360/Peer1.xhtml
+++ b/web/f360/Peer1.xhtml
@@ -27,15 +27,15 @@
             </h:form>
            <p:panelGrid columns="2" style="font-family: monospace; position: relative; float: right" >
                 <h:outputText value="*"/>
-                <h:outputText value="Strongly Disagree    " />
+                <h:outputText value="Never    " />
                 <h:outputText value="* *"/>
-                <h:outputText value="Disagree" />
+                <h:outputText value="Rarely" />
                 <h:outputText value="* * *"/>
-                <h:outputText value="Neutral" />
+                <h:outputText value="Dont't Know" />
                 <h:outputText value="* * * *"/>
-                <h:outputText value="Agree" />
+                <h:outputText value="Often" />
                 <h:outputText value="* * * * *"/>
-                <h:outputText value="Strongly Agree" />
+                <h:outputText value="Always" />
 
             </p:panelGrid>
             <h:form id="form">
