--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -47,10 +47,6 @@
         <h:link outcome="/feedback2013Group/List" value="Show All Feedback2013Group Items"/>
         <br />
         <h:link outcome="/feedback2013User/List" value="Show All Feedback2013User Items"/>
-        <h:form>
-            <h:commandButton action="#{feedback2013UserController.updatePassword()}" value="dsf" />
-
-        </h:form>
         <br />
         <h:link outcome="/fuserGroup/List" value="Show All FuserGroup Items"/>
         <br />
@@ -75,7 +71,22 @@
         <h:link outcome="/f360/admin/faculty/List" value="Show All Faculty Items"/>
         <br />
         <h:link outcome="/f360/admin/f360PeerInteraction/List" value="Show All F360PeerInteraction Items"/>
+        <br />
+        <h:link outcome="/admin/course/List" value="Show All Course Items"/>
+        <br />
+        <h:link outcome="/admin/program/List" value="Show All Program Items"/>
+        <br />
+        <h:link outcome="/admin/programCourse/List" value="Show All ProgramCourse Items"/>
+        <br />
+        <h:link outcome="/admin/subject/List" value="Show All Subject Items"/>
+        <br />
+        <h:link outcome="/admin/subjectQuestion/List" value="Show All SubjectQuestion Items"/>
     </h:body>
+
+
+
+
+
 
 
 
