--- a/web/admin/AdminIndex.xhtml
+++ b/web/admin/AdminIndex.xhtml
@@ -2,16 +2,56 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
 
     </h:head>
     <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="/welcomePrimefaces" value="Primefaces welcome page" />
+        <h:form>
+            <h:commandButton disabled="true" action="#{feedback2013UserController.updatePassword()}" value="Update Passwords and Groups." />
+            <br />
+            <h:commandButton action="#{authBackingBean.logout()}" value="Logout"/>
+
+        </h:form>
+        
+        <h:form id="frm">
+            <p:growl id="growl" showDetail="true"/>        
+
+            <p:inputText  value="#{feedback2013StudentController.userID}" />
+            <p:commandButton action="#{feedback2013StudentController.reset()}" value="Reset" update=":frm:growl"/>
+            <p:commandButton action="#{feedback2013StudentController.viewPassword()}" value="View Password" update=":frm:growl"/>
+            <p:commandButton action="#{feedback2013StudentController.viewIP()}" value="View IP" update=":frm:growl"/>
+            <p:commandButton action="#{feedback2013StudentController.logoutID()}" value="Log out User" update=":frm:growl"/>
+
+        </h:form>
+        <h:form >
+            <p:poll interval="5" update="loggedIn" />      
+
+            <p:dataTable scrollable="true" scrollRows="20" id="loggedIn" rowIndexVar="i" value="#{feedback2013StudentController.loggedInUsers}" var ="c" >
+                <p:column style="width: 10%">
+                    #{i+1}
+                </p:column>
+                <p:column style="width: 20%">
+                    #{c.uid}
+                </p:column>
+                <p:column>
+                    <p:commandButton action="#{feedback2013StudentController.reset(c.uid)}" value="Reset" update=":frm:growl,loggedIn"/>
+                    <p:commandButton action="#{feedback2013StudentController.logoutID(c.uid)}" value="Log out User" update=":frm:growl,loggedIn"/>
+                </p:column>
+                <p:column style="width: 20%">
+                    <h:outputText value="#{c.loginTime}">
+                        <f:convertDateTime timeZone="IST" pattern="hh:mm:ss" />
+                    </h:outputText>
+                </p:column>
+                <p:column style="width: 20%">
+                    #{c.ipAddress}
+                </p:column>
+                
+            </p:dataTable>
+        </h:form>
         <br />
         <h:link outcome="/admin/course/List" value="Show All Course Items"/>
         <br />
@@ -65,11 +105,7 @@
         <br />
         <h:link outcome="/admin/f360PeerInteraction/List" value="Show All F360PeerInteraction Items"/>
    
-        <h:form>
-           <h:commandButton action="#{feedback2013UserController.updatePassword()}" value="Update Passwords and Groups." />
-           <h:commandButton action="#{authBackingBean.logout()}" value="Logout"/>
 
-        </h:form>
     </h:body>
 
 
